# binwalk-ng

./: .editorconfig  .gitattributes  CARGO_README.md  Cargo.toml  Dockerfile  README.md  prek.toml
.github/workflows/: ghcr.yaml  quality.yaml  rust-release-binary.yml
dependencies/: pip.sh  requirements.txt  src.sh  ubuntu.sh
fuzzing/: Cargo.toml  README.md
fuzzing/src/: main.rs
scripts/: binwalk-ng-ui  binwalk-ui
src/: binwalk.rs  binwalk_ng.rs  cli_parser.rs  common.rs  display.rs  entropy.rs  extractors.rs  formats.rs  json.rs  lib.rs  magic.rs  main.rs  signatures.rs  structures.rs
src/extractors/: androidsparse.rs  arcadyan.rs  autel.rs  bmp.rs  bzip2.rs  cab.rs  common.rs  csman.rs  dahua_zip.rs  dmg.rs  dtb.rs  dumpifs.rs  dxbc.rs  encfw.rs  eva.rs  gif.rs  gpg.rs  gzip.rs  inflate.rs  iso9660.rs  jboot.rs  jffs2.rs  jpeg.rs  linux.rs  lz4.rs  lzfse.rs  lzma.rs  lzop.rs  matter_ota.rs  mbr.rs  mh01.rs  pcap.rs  pem.rs  png.rs  rar.rs  riff.rs  romfs.rs  sevenzip.rs  squashfs.rs  srec.rs  (+13 more)
src/formats/: aes.rs  android_bootimg.rs  androidsparse.rs  apfs.rs  arcadyan.rs  arj.rs  autel.rs  binhdr.rs  bmp.rs  btrfs.rs  bzip2.rs  cab.rs  cfe.rs  chk.rs  compressd.rs  copyright.rs  cpio.rs  cramfs.rs  csman.rs  dahua_zip.rs  deb.rs  dkbs.rs  dlink_fw.rs  dlink_tlv.rs  dlke.rs  dlob.rs  dmg.rs  dms.rs  dpapi.rs  dtb.rs  dxbc.rs  ecos.rs  efigpt.rs  elf.rs  encfw.rs  encrpted_img.rs  eva.rs  ext.rs  fat.rs  gif.rs  (+56 more)
src/signatures/: androidsparse.rs  bzip2.rs  cramfs.rs  csman.rs  dlink_tlv.rs  dmg.rs  dms.rs  dpapi.rs  ecos.rs  encfw.rs  eva.rs  ext.rs  fat.rs  gif.rs  gpg.rs  gzip.rs  hashes.rs  jboot.rs  jffs2.rs  linux.rs  logfs.rs  lzma.rs  lzop.rs  mbr.rs  mh01.rs  ntfs.rs  openssl.rs  pcap.rs  pem.rs  pkcs_der.rs  png.rs  rar.rs  romfs.rs  rsa.rs  sevenzip.rs  shrs.rs  squashfs.rs  trx.rs  ubi.rs  uboot.rs  (+7 more)
tests/: androidsparse.rs  csman.rs  eva_dual_kernel.rs  eva_secondary_only.rs  eva_single_kernel.rs  lz4.rs  lz4_trailing_data.rs  lzfse.rs  lzop.rs  rar.rs  srec.rs  tarball.rs  zstd.rs  zstd_trailing_data.rs
tests/common/: mod.rs
(+186 files in other folders)
