[package]
name = "binwalk-ng"
version = "3.1.1"
edition = "2024"
authors = ["Craig Heffner <heffnercj@gmail.com>"]
license = "MIT"
readme = "CARGO_README.md"
repository = "https://github.com/binwalk-ng/binwalk-ng"
description = "Analyzes data for embedded file types"
keywords = ["binwalk", "firmware", "analysis"]
categories = [
    "security",
    "command-line-utilities",
    "parsing-tools",
    "parser-implementations",
    "filesystem",
]

[lints.clippy]
redundant_type_annotations = "warn"
redundant_clone = "warn"
redundant_as_str = "warn"
panic = "warn"
nursery = "warn"


[features]
default = []
entropy-plot = ["dep:plotly", "dep:entropy"]

[dependencies]
log = "0.4.22"
base64 = "0.22.1"
walkdir = "2.5.0"
entropy = { version = "0.4.2", optional = true }
colored = "3.0.0"
terminal_size = "0.4"
crc32fast = "1.5"
crc32c = "0.6.8"
liblzma = "0.4.2"
bzip2 = "0.6.0"
lzfse = "0.2.0"
threadpool = "1.8.1"
serde_json = "1.0"
env_logger = "0.11.5"
flate2 = "1.1.2"
adler2 = "2.0"
md5 = "0.8.0"
miniz_oxide = "0.9.0"
aho-corasick = "1.1.3"
memchr = "2.8.2"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.16", features = ["derive"] }
xxhash-rust = { version = "0.8.12", features = ["xxh32"] }
hex = "0.4.3"
delink = { git = "https://github.com/binwalk-ng/delink" }
plotly = { version = "0.14", features = [
    "kaleido",
    "kaleido_download",
], optional = true }
jiff = "0.2.20"
zerocopy = { version = "0.8.28", features = ["derive"] }
u24 = "0.6.0"
rars = "0.4.0"
tar = "0.4"

[dependencies.uuid]
version = "1.23.4"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
lto = true

[[bin]]
name = "binwalk"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"
insta = { version = "1.48", features = ["yaml", "redactions"] }
walkdir = "2.5.0"
